Fix some layout issues

--- a/_patterns/banner/banner.css
+++ b/_patterns/banner/banner.css
@@ -1,4 +1,4 @@
 .hero-banner-content {
-  top: 5.25em;
-  left: 9em;
+  top: 10em;
+  left: 10em;
 }
