--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -1,6 +1,5 @@
 .card {
-  border: 1px solid var(--color-primary);
+  border: 3px solid var(--color-primary);
   border-radius: 10px;
-  width: 250px;
-  padding: 1em;
+  width: 80%;
 }
