--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -1,5 +1,7 @@
 .about-info {
   max-width: 50em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn-cart {
